Пятое ДЗ!исправленное

--- a/homeWork5JSDOM2/index.html
+++ b/homeWork5JSDOM2/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <p>Select figure!</p>
-        <select id="figure" onchange="figure()">
+        <select id="figure">
             <option></option>
             <option value="cube">cube</option>
             <option value="rectangle">rectangle</option>
